CSS and main content is correct in Notifications Page, so wrap them in a usable component

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,7 +2,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    width: 100vw;
     height: 8vh;
     background-color: rgba(255, 83, 83, 0.16);
 
