--- a/src/Components/Pages/Notifications/Notifications.module.css
+++ b/src/Components/Pages/Notifications/Notifications.module.css
@@ -3,6 +3,18 @@
   }
 
   .mainContent {
-    flex: 1; /* Allow the main content to expand and fill the available space */
+    width: 100%;
   }
 
+  h2 {
+    color: black;
+  }
+
+
+  .notificationContent {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #84e8ef;
+    top: 100px;
+  }
